RAID-434: Add endpoint to list embargoed raids
